# src/routes/auth.routes.ts
@@ -1,10 +1,9 @@
 import { Router } from "express";
-import { AuthController } from "../controllers/auth.controller";
+import { login, refreshToken } from "../controllers/auth.controller";
 
 const router = Router();
-const authController = new AuthController();
 
-router.post("/login", authController.login);
-router.post("/refresh-token", authController.refreshToken);
+router.post("/login", login);
+router.post("/refresh-token", refreshToken);
 
 export default router;
