# src/routes/credential.routes.ts
@@ -1,13 +1,12 @@
 import { Router } from "express";
-import { CredentialController } from "../controllers/credential.controller";
+import {
+  requestPasswordReset,
+  resetPassword,
+} from "../controllers/credential.controller";
 
-const credentialController = new CredentialController();
 const router = Router();
-router.post(
-  "/credentials/request_password_reset",
-  credentialController.requestPasswordReset
-);
+router.post("/credentials/request_password_reset", requestPasswordReset);
 
-router.put("/credentials/reset_password", credentialController.resetPassword);
+router.put("/credentials/reset_password", resetPassword);
 
 export default router;
