# src/validations/user.findbycriteria.schema.ts
@@ -1,0 +1,9 @@
+// import * as yup from "yup";
+// import { IUserCreateDto } from "../dtos/IUserCreateDto";
+// import { ValidationFactory } from "./validation.factory";
+// export const findByCriteriaSchema: yup.Schema<IUserCreateDto> = yup.object({
+//   username: ValidationFactory.getUsernameRules(),
+//   email: ValidationFactory.getEmailRules(),
+//   firstName: yup.string().required("El nombre es requerido"),
+//   lastName: yup.string().required("El apellido es requerido"),
+// });
